fix: fix a button close modal contrast
Fix a contrast color on button close modal.

--- a/src/scss/components/atoms/_button.scss
+++ b/src/scss/components/atoms/_button.scss
@@ -118,10 +118,10 @@
   }
 
   &--close {
-    background-color: var(--color-background);
+    background-color: #171823;
     color: var(--color-neutral);
     &:hover {
-      background-color: var(--color-background-hover);
+      background-color: #151620;
     }
   }
 
